--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -2,13 +2,10 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools" android:id="@+id/mobile_navigation"
-            app:startDestination="@id/oneFragment">
+            app:startDestination="@id/mainActivity">
 
-    <fragment android:id="@+id/oneFragment" android:name="com.ajithvgiri.swiper.fragments.OneFragment"
-              android:label="fragment_one" tools:layout="@layout/fragment_one">
-        <action android:id="@+id/action_oneFragment_to_twoFragment3" app:destination="@id/twoFragment"
-                app:popUpTo="@+id/twoFragment" app:popUpToInclusive="true"/>
-    </fragment>
-    <fragment android:id="@+id/twoFragment" android:name="com.ajithvgiri.swiper.fragments.TwoFragment"
-              android:label="fragment_two" tools:layout="@layout/fragment_two"/>
+    <activity android:id="@+id/mainActivity" android:name="com.ajithvgiri.swiper.MainActivity"
+              android:label="activity_main" tools:layout="@layout/activity_main"/>
+    <fragment android:id="@+id/oneFragment3" android:name="com.ajithvgiri.swiper.fragments.OneFragment"
+              android:label="fragment_one" tools:layout="@layout/fragment_one"/>
 </navigation>
